# npml

./: .gitignore  README.md  pyproject.toml  pytest.ini
npml/cluster/: kmeans.py
npml/nn/: activations.py  model.py
npml/nn/layers/: __init__.py  dense.py  layer.py
tests/: test_kmeans.py  test_npdl.py
tests/cluster/: test_cluster.py  test_kmeans.py
tests/nn/: test_nn.py
